Fix z-index of all interface components.

--- a/static/css/input.css
+++ b/static/css/input.css
@@ -157,7 +157,7 @@
 
 	/* Navbar */
 	.navbar {
-		@apply bg-white dark:bg-neutral-900 sticky top-0 z-10 border-b border-neutral-100 dark:border-neutral-800;
+		@apply bg-white dark:bg-neutral-900 sticky top-0 z-30 border-b border-neutral-100 dark:border-neutral-800;
 	}
 	
 	.navbar__wrapper {
@@ -235,7 +235,7 @@
 	}
 
 	.btn__scroll {
-		@apply shadow p-4 fixed z-20 bottom-4 right-4 bg-primary hover:bg-red-700 text-white focus:ring-red-300 rounded-xl;
+		@apply shadow p-4 fixed z-50 bottom-4 right-4 bg-primary hover:bg-red-700 text-white focus:ring-red-300 rounded-xl;
 	}
 	
 	.btn__icon {
